--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,9 @@ name: Testing
 on: [push]
 
 jobs:
-  release:
+  build:
     runs-on: ${{ matrix.os }}
+    name: NameTest
 
     strategy:
       matrix:
