--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
         os: [windows-2019, ubuntu-18.04]
 
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.4.1
+
       - name: Check out Git repository
         uses: actions/checkout@v2
 
