--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.4.1
+        with:
+          access_token: ${{ github.cancel_token }}
 
       - name: Check out Git repository
         uses: actions/checkout@v2
