--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
-name: test
+name: build
 on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [windows-2019]
 
     steps:
       - name: Cancel Previous Runs
@@ -30,9 +30,9 @@ jobs:
       - name: yarn test
         uses: GabrielBB/xvfb-action@v1.2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.cancel_token }}
         with:
           run: |
-            yarn lint
+            yarn package-ci
             yarn tsc
-            yarn test
+            yarn build-e2e
