--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
 name: build
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [windows-2019]
+  build:
+    runs-on: windows-2019
 
     steps:
       - name: Cancel Previous Runs
@@ -27,12 +26,9 @@ jobs:
         run: |
           yarn install --frozen-lockfile
 
-      - name: yarn test
+      - name: Build
         uses: GabrielBB/xvfb-action@v1.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.cancel_token }}
         with:
           run: |
             yarn package-ci
-            yarn tsc
             yarn build-e2e
