--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
 name: build
-on:
-  push:
-    branches:
-      - master
+on: push
 
 jobs:
-  release:
-    runs-on: windows-2019
+  build:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [windows-2019, ubuntu-latest]
 
     steps:
       - name: Cancel Previous Runs
