--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build-and-test:
-    name: Runing Test
+    name: Runing Build and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -32,13 +32,13 @@ jobs:
         run: |
           yarn install --frozen-lockfile
 
-      - name: Run headless test
-        uses: GabrielBB/xvfb-action@v1.2
-        with:
-          run: |
-            yarn package-ci
-            yarn lint
-            yarn tsc
-            yarn test
-            yarn build-e2e
-            yarn test-e2e
+      - name: Runing tests
+        run: |
+          yarn lint
+          yarn test
+
+      - name: Runing build
+        run: |
+          yarn package-ci
+          yarn build-e2e
+          yarn test-e2e
