--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Runing tests
         uses: GabrielBB/xvfb-action@v1.2
+        with:
         run: |
           yarn lint
           yarn test
